--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+This is a data structure class project.
+It is a basic calculator for Chavvi.
